# ya2de

./: .clang-format  .gitignore  CMakeLists.txt  README.md
data/: scenes.json
data/scenes/: demo_area2.json  demo_scene.json
doc/: lua_api.md
extlibs/LoggerCpp/: CMakeLists.txt
extlibs/LoggerCpp/src/: OutputConsole.cpp  OutputDebug.cpp  OutputFile.cpp
extlibs/lua-5.4.4/: CMakeLists.txt
extlibs/nlohmann-json/: CMakeLists.txt
include/: application.hpp  areaswitchnode.hpp  config.h  game.hpp  game_state.hpp  init.hpp  input.hpp  nodefactories.hpp  resource_holder.hpp  resource_pack.hpp  resourcecollection.hpp  resourcecollection.inl  resourceidentifiers.hpp  resourcepack.hpp  scene.hpp  scenedata.hpp  scenenode.hpp  shapenode.hpp  soundplayernode.hpp  spritenode.hpp  state_frame.hpp  state_stack.hpp  textboxnode.hpp  textnode.hpp  tilemapnode.hpp  tileset.hpp  triggernode.hpp  utils.hpp  ysortnode.hpp
media/tilemaps/isomap/: isomap.txt
media/tilemaps/room/: room.txt
scripts/: playerMover.lua  spriteCircle.lua  textbox.lua  trigger_togglevisibility.lua  triggernode_test.lua
scripts/lib/: json.lua
src/: application.cpp  areaswitchnode.cpp  game.cpp  game_state.cpp  main.cpp  nodefactories.cpp  scene.cpp  scenedata.cpp  scenenode.cpp  shapenode.cpp  soundplayernode.cpp  spritenode.cpp  state_frame.cpp  state_stack.cpp  textboxnode.cpp  textnode.cpp  tilemapnode.cpp  tileset.cpp  triggernode.cpp  ysortnode.cpp
